--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Ooooh!</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">You're looking for a cool new startup to shower with money and re-tweets, right?  Well, here it is!</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -204,17 +204,18 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            We are excited to launch our new company and product, Ooooh.
+            After being featured in too many magazines to mention and having
+            created an online stir, we know that Ooooh is going to be big.
+            You may have seen us in the Dinosaurs’ Den where we were we
+            told that we didn’t need them because we were already doing
+            it so well ourselves, so that’s what we have continued to do.
+            We also hope to win Startup Fictional Business of the Year this
+            Year.
+          </p>
+          <p>
+            Browse our Bitstarter and see for yourself why you need Ooooh,
+            and we need money.
           </p>
         </div>
       </div>
@@ -222,17 +223,32 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            Here are some of the fantastic things people have had to say
+            about Ooooh:
+          </p>
+          <p>
+            “It’s just brilliant. I will recommend Ooooh to everyone
+            I know!” A. Girl.
+          </p>
+          <p>
+            “I’m really glad these guys got Ooooh out there.
+            I’ve bought it and now think perhaps I should have invested!” A. Dinosaur.
+          </p>
+          <p>
+            Here are just some of the magazine reviews we have had:
+          </p>
+          <p>
+            “Ooooh. That says it all really.” ★★★★
+            One of the Magazines
+          </p>
+          <p>
+            “What a product. Why didn’t someone think of it sooner?” ★★★★★
+Another Magazine
+          </p>
+          <p>
+            “Get out there and buy it if you’re a customer and
+            stock it if you’re a retailer – you’d be mad not to!” ★★★★★
+            Some other Magazine
           </p>
         </div>
         <div class="span5 asset">
